finished extra user routes, middleware, and docs
